--- a/project/vipinstagram/howto/index.html
+++ b/project/vipinstagram/howto/index.html
@@ -43,14 +43,18 @@
                         <details>
                           <summary>Instagram</summary>
                           <div>
+                            <b>Internal web app interface:</b>
                             <ol>
                               <li>Long press on any small thumbnails (videos or images) at listing pages: <i>/tags, /explore, /profile, or search pages</i>, etc.</li>
                               <li>Or tap the <b>BOOKMARK</b> icon.</li>
                               <li>Or tap the <b>LIKE</b> icon.</li>
                               <li>Or long press the post creation <b>TIME</b>.</li>
-                              <li>Or tap the three vertical dots at the top right corner, and hit <b>Copy link</b>.</li>
                             </ol>
-                            <p>The first four are applicable only if using the provided private/ internal web app interface. The last can be any public browsers, or Instagram app.</p>
+                            <b>External browsers, or Instagram app:</b>
+                            <ol>
+                              <li>Tap the three vertical dots at the top right corner, and hit <b>Copy link</b>.</li>
+                            </ol>
+                            <p>Be informed! The last option requires you provide credentials via <b>Settings > Private mode</b>. Unlike the internal, the external may trigger annoying <b>New login</b> email warning due to being less persistent sessions. Please use the internal for convenience regardless its limitations due to being web app, not native app. The same priciple applies to other supported sites below.</p>
                             <img src="https://gausarts.github.io/project/vipinstagram/howto/instagram-small.jpg"  srcset="https://gausarts.github.io/project/vipinstagram/howto/instagram-medium.jpg 640w, https://gausarts.github.io/project/vipinstagram/howto/instagram-large.jpg 1024w" alt="How to download Instagram photos and videos easily with Android" />
 
                           </div>
@@ -70,7 +74,7 @@
                               </ul>
                           </ol>
 
-
+                          <p>Be informed! Some ISPs like those in Indonesia block Reddit, Vimeo, etc. Use VPN, etc., or stay safe. Only works for a stand-alone post, not the one embedded inside another post. Just visit its original post to download.</p>
                           <img src="https://gausarts.github.io/project/vipinstagram/howto/reddit-small.jpg"  srcset="https://gausarts.github.io/project/vipinstagram/howto/reddit-medium.jpg 640w, https://gausarts.github.io/project/vipinstagram/howto/reddit-large.jpg 1024w" alt="How to download Reddit videos easily with Android" />
 
                           </div>
@@ -109,7 +113,7 @@
                                 <li>No supports.</li>
                               </ul>
                           </ol>
-
+                          <p>Be informed! The web interface lacks of search and listing features. You can however search usernames using the internal search provided by this app at the top right corner.</p>
 
                           <img src="https://gausarts.github.io/project/vipinstagram/howto/tiktok-small.jpg"  srcset="https://gausarts.github.io/project/vipinstagram/howto/tiktok-medium.jpg 640w, https://gausarts.github.io/project/vipinstagram/howto/tiktok-large.jpg 1024w" alt="How to download TikTok videos easily with Android" />
 
@@ -128,7 +132,7 @@
                                 <li>No supports.</li>
                               </ul>
                           </ol>
-
+                          <p>Be informed! Some ISPs like those in Indonesia block Reddit, Vimeo, etc. Use VPN, etc., or stay safe.</p>
 
                           <img src="https://gausarts.github.io/project/vipinstagram/howto/vimeo-small.jpg"  srcset="https://gausarts.github.io/project/vipinstagram/howto/vimeo-medium.jpg 640w, https://gausarts.github.io/project/vipinstagram/howto/vimeo-large.jpg 1024w" alt="How to download TikTok videos easily with Android" />
 
