--- a/project/vipinstagram/faq/index.html
+++ b/project/vipinstagram/faq/index.html
@@ -140,13 +140,14 @@
                               <li>Have backup dummy accounts, many.</li>
                               <li>Use different dummy accounts, follow the same private one. Input the first at <b>Settings > Private mode</b>. The other at Instagram.</li>
                               <li>Use the same dummy accounts, and do trials and errors at your own descretion.</li>
+                              <li>Install VPN, or proxy tools.</li>
                             </ul>
                           </div>
                         </details>
                         <details>
                           <summary>Why scraping not work?</summary>
                           <div>
-                            Only applicable to FREE version. Before scraping you will be presented a video ad. A minimum countdown threshold and some points are required before you close it. If you close it too early, scraping is not triggered.
+                            Only applicable to FREE version. Before scraping you will be presented a video ad. A minimum countdown threshold and some points are required before you close it. If you close it too early, scraping is not started or triggered.
 
                           </div>
                         </details>
