--- a/project/vipinstagram/howto/index.html
+++ b/project/vipinstagram/howto/index.html
@@ -113,7 +113,7 @@
                                 <li>No supports.</li>
                               </ul>
                           </ol>
-                          <p>Be informed! The web interface lacks of search and listing features. You can however search usernames using the internal search provided by this app at the top right corner.</p>
+                          <p>Be informed! The web interface lacks of search and listing features. You can however search usernames using the internal search provided by this app at the top right corner. You can also download videos directly from TikTok app. The only difference is integrated organization with other video providers.</p>
 
                           <img src="https://gausarts.github.io/project/vipinstagram/howto/tiktok-small.jpg"  srcset="https://gausarts.github.io/project/vipinstagram/howto/tiktok-medium.jpg 640w, https://gausarts.github.io/project/vipinstagram/howto/tiktok-large.jpg 1024w" alt="How to download TikTok videos easily with Android" />
 
