--- a/project/vipinstagram/howto/index.html
+++ b/project/vipinstagram/howto/index.html
@@ -54,7 +54,7 @@
                             <ol>
                               <li>Tap the three vertical dots at the top right corner, and hit <b>Copy link</b>.</li>
                             </ol>
-                            <p>Be informed! The last option requires you provide credentials via <b>Settings > Private mode</b>. Unlike the internal, the external may trigger annoying <b>New login</b> email warning due to being less persistent sessions. Please use the internal for convenience regardless its limitations due to being web app, not native app. The same priciple applies to other supported sites below.</p>
+                            <p>Be informed! The last option requires you provide credentials via <b>Settings > Private mode</b>. Unlike the internal, the external may trigger annoying <b>New login</b> email warning due to being less persistent sessions. Please use the internal for convenience regardless its limitations due to being web app, not native app. The same principle applies to other supported sites.</p>
                             <img src="https://gausarts.github.io/project/vipinstagram/howto/instagram-small.jpg"  srcset="https://gausarts.github.io/project/vipinstagram/howto/instagram-medium.jpg 640w, https://gausarts.github.io/project/vipinstagram/howto/instagram-large.jpg 1024w" alt="How to download Instagram photos and videos easily with Android" />
 
                           </div>
@@ -74,7 +74,7 @@
                               </ul>
                           </ol>
 
-                          <p>Be informed! Some ISPs like those in Indonesia block Reddit, Vimeo, etc. Use VPN, etc., or stay safe. Only works for a stand-alone post, not the one embedded inside another post. Just visit its original post to download.</p>
+                          <p>Be informed! Some ISPs like those in Indonesia block Reddit, Vimeo, etc. Use VPN, proxies, etc., or stay safe. Only works for a stand-alone post, not the one embedded inside another post. Just visit its original post to download.</p>
                           <img src="https://gausarts.github.io/project/vipinstagram/howto/reddit-small.jpg"  srcset="https://gausarts.github.io/project/vipinstagram/howto/reddit-medium.jpg 640w, https://gausarts.github.io/project/vipinstagram/howto/reddit-large.jpg 1024w" alt="How to download Reddit videos easily with Android" />
 
                           </div>
@@ -93,7 +93,7 @@
                                 <li>Long press on images <b>internal to</b> or hosted in Twitter.</li>
                               </ul>
                           </ol>
-                          <p>Be informed! Only works for a stand-alone tweet, not the one embedded inside another tweet. Just visit its original tweet to download. Images leading to external sites, identified by <b>https://t.co/...</b> url, not internally hosted at Twitter, are not supported.</p>
+                          <p>Be informed! Only works for a stand-alone tweet, not the one embedded inside another tweet, identified by a bordered box/ card. Just visit its original tweet to download. Images leading to external sites, identified by <b>https://t.co/...</b> url, not internally hosted at Twitter, are not supported.</p>
 
                           <img src="https://gausarts.github.io/project/vipinstagram/howto/twitter-small.jpg"  srcset="https://gausarts.github.io/project/vipinstagram/howto/twitter-medium.jpg 640w, https://gausarts.github.io/project/vipinstagram/howto/twitter-large.jpg 1024w" alt="How to download Twitter photos and videos easily with Android" />
 
@@ -113,7 +113,7 @@
                                 <li>No supports.</li>
                               </ul>
                           </ol>
-                          <p>Be informed! The web interface lacks of search and listing features. You can however search usernames using the internal search provided by this app at the top right corner. You can also download videos directly from TikTok app. The only difference is integrated organization with other video providers.</p>
+                          <p>Be informed! The web interface lacks of search and listing features. You can however search <b>usernames</b> using the internal search provided by this app at the top right corner. You can also download videos directly from TikTok app. The only differences are no TikTok watermark, slightly smaller size, and integrated organization with other video providers if using this app.</p>
 
                           <img src="https://gausarts.github.io/project/vipinstagram/howto/tiktok-small.jpg"  srcset="https://gausarts.github.io/project/vipinstagram/howto/tiktok-medium.jpg 640w, https://gausarts.github.io/project/vipinstagram/howto/tiktok-large.jpg 1024w" alt="How to download TikTok videos easily with Android" />
 
@@ -132,7 +132,7 @@
                                 <li>No supports.</li>
                               </ul>
                           </ol>
-                          <p>Be informed! Some ISPs like those in Indonesia block Reddit, Vimeo, etc. Use VPN, etc., or stay safe.</p>
+                          <p>Be informed! Some ISPs like those in Indonesia block Reddit, Vimeo, etc. Use VPN, proxies, etc., or stay safe.</p>
 
                           <img src="https://gausarts.github.io/project/vipinstagram/howto/vimeo-small.jpg"  srcset="https://gausarts.github.io/project/vipinstagram/howto/vimeo-medium.jpg 640w, https://gausarts.github.io/project/vipinstagram/howto/vimeo-large.jpg 1024w" alt="How to download TikTok videos easily with Android" />
 
@@ -150,7 +150,7 @@
                         <details>
                           <summary>Tips</summary>
                           <div>
-                            <p>If the images in this tutorial section are not visible, be sure to connect internet. <br><br>Be warned! Do not use the app web interface to register accounts. It is just a webview, not real browser, too many limitations may break registration process, like upload, paste etc. Use real browsers or official apps for registrations. Only use it once you have an account to login and download, not to register a new one.</p>
+                            <p>If the images in this tutorial section are not visible, be sure to connect internet. <br><br>Be warned! Do not use the app web interface to register accounts. It is just a WebView, not real browser, too many limitations may break registration process, like upload, paste etc. Use real browsers or official apps for registrations. No phishing, just less sophisticated browser interface known as WebView. Only use it once you have an account to login and download, not to register a new one.</p>
                           </div>
                         </details>
                       </div>
