--- a/project/vipinstagram/faq/index.html
+++ b/project/vipinstagram/faq/index.html
@@ -36,7 +36,9 @@
               <div class="region region-content">
                 <div id="block-bartok-bold-system-main--2" class="block--bartok-bold-system-main--2 block block--system block--system-main-block">
                   <article role="article" about="/project/vipinstagram/faq" typeof="schema:WebPage" class="node node--1060 node--type-page node--view-mode-full clearfix">
-                    <header><span property="schema:name" content="FAQ" class="rdf-meta hidden"></span></header>
+                    <header><span property="schema:name" content="FAQ" class="rdf-meta hidden"></span>
+                        <a href="https://gausarts.github.com/project/vipinstagram/faq/index.html">EN</a> | <a href="https://gausarts.github.com/project/vipinstagram/faq/id/index.html">ID</a>
+                    </header>
                     <div class="node__content clearfix">
                       <div property="schema:text" class="clearfix text-formatted field field--name-body field--type-text-with-summary field--label-hidden field__item">
 
