--- a/project/vipinstagram/howto/index.html
+++ b/project/vipinstagram/howto/index.html
@@ -54,7 +54,7 @@
                             <ol>
                               <li>Tap the three vertical dots at the top right corner, and hit <b>Copy link</b>.</li>
                             </ol>
-                            <p>Be informed! The last option requires you provide credentials via <b>Settings > Private mode</b>. Unlike the internal, the external may trigger annoying <b>New login</b> email warning due to being less persistent sessions. Please use the internal for convenience regardless its limitations due to being web app, not native app. The same principle applies to other supported sites.</p>
+                            <p>Be informed! The last option requires you provide credentials via <b>Settings > Private mode</b>. Unlike the internal, the external may trigger annoying <b>New login</b> email warning due to being less persistent sessions. Please use the internal for convenience regardless its limitations -- due to being web app, not native app. The same principle applies to other supported sites.</p>
                             <img src="https://gausarts.github.io/project/vipinstagram/howto/instagram-small.jpg"  srcset="https://gausarts.github.io/project/vipinstagram/howto/instagram-medium.jpg 640w, https://gausarts.github.io/project/vipinstagram/howto/instagram-large.jpg 1024w" alt="How to download Instagram photos and videos easily with Android" />
 
                           </div>
@@ -113,7 +113,7 @@
                                 <li>No supports.</li>
                               </ul>
                           </ol>
-                          <p>Be informed! The web interface lacks of search and listing features. You can however search <b>usernames</b> using the internal search provided by this app at the top right corner. You can also download videos directly from TikTok app. The only differences are no TikTok watermark, slightly smaller size, and integrated organization with other video providers if using this app.</p>
+                          <p>Be informed! The web interface lacks of search and listing features. You can however search <b>usernames</b> using the internal search provided by this app at the top right corner. You can also download videos directly from TikTok app. The only differences are slightly smaller size, and integrated organization with other video providers if using this app.</p>
 
                           <img src="https://gausarts.github.io/project/vipinstagram/howto/tiktok-small.jpg"  srcset="https://gausarts.github.io/project/vipinstagram/howto/tiktok-medium.jpg 640w, https://gausarts.github.io/project/vipinstagram/howto/tiktok-large.jpg 1024w" alt="How to download TikTok videos easily with Android" />
 
@@ -151,6 +151,7 @@
                           <summary>Tips</summary>
                           <div>
                             <p>If the images in this tutorial section are not visible, be sure to connect internet. <br><br>Be warned! Do not use the app web interface to register accounts. It is just a WebView, not real browser, too many limitations may break registration process, like upload, paste etc. Use real browsers or official apps for registrations. No phishing, just less sophisticated browser interface known as WebView. Only use it once you have an account to login and download, not to register a new one.</p>
+                            <p>If <b>Copy link</b> <em>outside the internal web app</em> is not working, please use the provided internal web app interface regardless its limitations, and follow the above-outlined directions strictly.</p>
                           </div>
                         </details>
                       </div>
