--- a/project/vipinstagram/disclaimer/index.html
+++ b/project/vipinstagram/disclaimer/index.html
@@ -16,7 +16,7 @@
   <link rel="revision" href="/project/vipinstagram/disclaimer" />
   <title>Disclaimer | gaus</title>
   <style>
-    html,body{padding:0;margin:0;font-size:18px;line-height:1.2;overflow-x:hidden}details summary::-webkit-details-marker{display:none}details[open] summary~*{animation:open .3s ease-in-out}@keyframes open{0%{opacity:0}100%{opacity:1}}details summary{width:100%;padding:.75rem 0;border-top:1px solid #444;position:relative;cursor:pointer;font-size:.92rem;font-weight:300;list-style:none}details summary::after{content:"+";color:#999;position:absolute;font-size:1rem;line-height:0;margin-top:.5rem;right:0;font-weight:200;transform-origin:center;transition:200ms linear}details[open] summary::after{transform:rotate(45deg)}details summary{outline:0}summary~*{font-size:.92rem;line-height:1.6;margin:0 0 1rem;padding-top:1rem}@media screen and (max-width: 1025px){.visible-desktop{visibility:hidden;position:absolute}}
+    html,body{padding:0;margin:0;font-size:18px;line-height:1.2;overflow-x:hidden}details summary::-webkit-details-marker{display:none}details[open] summary~*{animation:open .3s ease-in-out}@keyframes open{0%{opacity:0}100%{opacity:1}}details summary{width:100%;padding:.75rem 0;border-top:1px solid #444;position:relative;cursor:pointer;font-size:.92rem;font-weight:300;list-style:none}details summary::after{content:"+";color:#999;position:absolute;font-size:1rem;line-height:0;margin-top:.5rem;right:0;font-weight:200;transform-origin:center;transition:200ms linear}details[open] summary::after{transform:rotate(45deg)}details summary{outline:0}summary~*{font-size:.92rem;line-height:1.6;margin:0 0 1rem;padding-top:1rem}article header{font-weight:600;text-align:right;padding:15px}article header a{padding:5px 10px;text-decoration:none;}article header a:visited{color:#000}@media screen and (max-width: 1025px){.visible-desktop{visibility:hidden;position:absolute}}
   </style>
 </head>
 
@@ -108,7 +108,7 @@
           </main>
         </div>
       </div>
-      <footer class="l-footer">
+      <footer class="l-footer visible-desktop">
         <p><small>© 2008 gaus <span class="visible-desktop"></span>| <a href="https://play.google.com/store/apps/details?id=vip.gaus.instagramphotovideodownloader.free"><b>VIP Downloader for Instagram, Facebook, Reddit, Tiktok, Twitter,
                 Vimeo</b></a></span></small></p>
       </footer>
