--- a/project/vipinstagram/faq/id/index.html
+++ b/project/vipinstagram/faq/id/index.html
@@ -75,10 +75,13 @@
                         <details>
                           <summary>Cara unduh media dari akun privat?</summary>
                           <div>
-                            <b>Dua cara:</b><br> 1. Tekan lama pada gambar (seperti pada laman /explore, /tags, /search atau profile, pokoknya yang ada gambar kecil) guna menyimpan media. Aplikasi akan mengunduh bila mendetekeksi tekanan tertahan.
-                            <br>2. Masuk laman
-                            penuh, pijit tombol unduhan yang disediakan. Harus login dulu agar aplikasi bisa melihat yang Anda lihat tanpa otorisasi khusus. Aplikasi ini tidak membaca, tidak tahu, tidak menyimpan, juga tidak peduli perihal akun atau
-                            kata sandi Instagram Anda. Aplikasi hanya meminjam mata Anda guna bisa mengunduh media.
+                            <ol>
+                              <li>Tekan lama pada gambar (seperti pada laman /explore, /tags, /search atau profile, pokoknya yang ada gambar kecil) guna menyimpan media. Aplikasi akan mengunduh bila mendetekeksi tekanan tertahan.</li>
+                              <li>Masuk laman penuh, pijit tombol unduhan yang disediakan. Harus login dulu agar aplikasi bisa melihat yang Anda lihat tanpa otorisasi khusus.
+                            </li>
+                            </ol>
+                            <p>Aplikasi ini tidak membaca, tidak tahu, tidak menyimpan, juga tidak peduli perihal akun atau
+                            kata sandi Instagram Anda. Aplikasi hanya meminjam mata Anda guna bisa mengunduh media.</p>
                           </div>
                         </details>
                         <details>
@@ -91,30 +94,31 @@
                         <details>
                           <summary>Persyaratan Skraping?</summary>
                           <div>
-                            - Halaman profil berisi gambar kecil, bukan laman berisi gambar besar. <br>- Koneksi internet kuat. <br>- Ruang penyimpanan besar (30gb+ amanya). Jika minim, bisa error kekurangan ruang. Jangan panik.
+                            <ul>
+                              <li>Halaman profil berisi gambar kecil, bukan laman berisi gambar besar. <br></li>
+                              <li>Koneksi internet kuat. <br></li>
+                              <li>Ruang penyimpanan besar (30gb+ amanya). Jika minim, bisa error kekurangan ruang. Jangan panik.
                             Pijit <b>Abort</b>. Atur ruang, pindah dan hapus berkas. Ganti atau masukkan kartu memori kosong. Pastikan dipilih via tombol <b>Atur folder</b>.
+                            </li>
+                            </ul>
                           </div>
                         </details>
                         <details>
                           <summary>Apakah skraping aman buat akun?</summary>
                           <div>
-                            Tidak. Barang terlarang. Tanggung sendiri akibatnya. Anda sudah diperingatkan sebelum skraping, siap-siap kena ban. Jika tak siap, dan tidak tahu cara bermain cantik, jangan tergoda. Langkah-langkah antisipatif sudah
-                            dilakukan guna mengurangi
-                            pemicu algoritme banning seperti bikin laku lajak manusia, mengurangi pembatasan kerapatan permintaan, UA dan cookie yang persistent, dsb. Tidak ada jaminan sama sekali.
+                            Tidak. Barang terlarang. Tanggung sendiri akibatnya. Anda sudah diperingatkan sebelum skraping, siap-siap kena ban. Jika tak siap, dan tidak tahu cara bermain cantik, jangan tergoda. Langkah-langkah antisipatif sudah dilakukan guna mengurangi pemicu algoritme banning seperti bikin laku lajak manusia, mengurangi pembatasan kerapatan permintaan, UA dan cookie yang persistent, dsb. Tidak ada jaminan sama sekali.
                           </div>
                         </details>
                         <details>
-                          <summary>Apa maksud <i>bermain cantik<i>?</summary>
+                          <summary>Apa maksud <i>bermain cantik</i>?</summary>
                           <div>
-                            Skraping adalah perilaku bot, bukan manusia. Bot banyak diban.
+                            Skraping adalah perilaku bot, bukan manusia. Bot banyak di b.a.n.
                             <b>Main cantik:</b>
                             <ul>
-                              <li>Laku lajak manusia. Klik, buka, tutup, balik, turun, naik. Laku lajak bot, melakukan satu tugas berulang-ulang. Jangan unduh terlalu banyak. Jangan suka terlalu banyak. Apapun yang diawali terlalu itu tidak baik,
-                                termasuk terlalu baik.</li>
-                              <li>Stop downloading anything when reaching 300 per 24 hour. You will be prompted a number when scraping.</li>
-                              <li>Only scrap 100 at most at a time. You can rescan and rescrap the rest tomorrow.</li>
-                              <li>Have backup accounts, many.</li>
-                              <li>Anything against the above is not safe at all. You had been warned. Do trials and errors at your own descretion.</li>
+                              <li>Laku lajak manusia. Klik, buka, tutup, balik, turun, naik. Laku lajak bot, melakukan satu tugas berulang-ulang. Jangan unduh terlalu banyak. Jangan suka terlalu banyak. Apapun yang diawali terlalu itu tidak baik, termasuk terlalu baik.</li>
+                              <li>Berhenti unduh bila mencapai 300 per 24 jam. Anda akan dikasi nomer saat skraping.</li>
+                              <li>Bikin akun cadangan, proxy, vpn, dll., yang banyak.</li>
+                              <li>Coba-coba saja sendiri.</li>
                             </ul>
                           </div>
                         </details>
@@ -218,8 +222,7 @@
         </div>
       </div>
       <footer class="l-footer visible-desktop">
-        <p><small>© 2008 gaus <span class="visible-desktop"></span>| <a href="https://play.google.com/store/apps/details?id=vip.gaus.instagramphotovideodownloader.free"><b>VIP Downloader for Instagram, Facebook, Reddit, Tiktok, Twitter,
-                Vimeo</b></a></span></small></p>
+        <p><small>© 2008 gaus <span class="visible-desktop"></span>| <a href="https://play.google.com/store/apps/details?id=vip.gaus.instagramphotovideodownloader.free"><b>VIP Downloader for Instagram, Facebook, Reddit, Tiktok, Twitter, Vimeo</b></a></span></small></p>
       </footer>
     </div>
   </div>
