--- a/project/vipinstagram/faq/id/index.html
+++ b/project/vipinstagram/faq/id/index.html
@@ -49,8 +49,12 @@
                         <details>
                           <summary>Di mana gambar dan video disimpan?</summary>
                           <div>
-                            Di kartu SD (sekunder atau eksternal) Anda (<b>Penyimpanan internal > Pictures|Movies > VIP Downloader</b> or <b>SD card/penyimpanan luar > VIP Downloader > Pictures|Movies</b>). Pastikan untuk mengaktifkan izin yang
-                            diminta. Jika tidak, percuma.
+                            <ul>
+                              <li><b>Penyimpanan internal > Pictures|Movies > VIP Downloader</b></li>
+                              <li><b>SD card/penyimpanan luar > VIP Downloader > Pictures|Movies</b>)</li>
+                              <li>Atau folder pilihan Anda bila punya slot memory tambahan.</li>
+                            </ul>
+                            <p>Pastikan untuk mengaktifkan izin yang diminta. Jika tidak, percuma.</p>
                           </div>
                         </details>
                         <details>
@@ -58,14 +62,14 @@
                           <div>
                             <b>Privat/ Internal</b>:
                             <ul>
-                              <li>harus login via aplikasi guna bisa mengakses akun private dan public.</li>
-                              <li>hanya bisa memakai tampilan web yang disediakan aplikasi.</li>
+                              <li>Harus login via aplikasi guna bisa mengakses akun private dan public.</li>
+                              <li>Hanya bisa memakai tampilan web yang disediakan aplikasi.</li>
                               <li>Bisa unduh dimana saja cukup dengan pijit lama pada gambar kecil. Atau pijit ikon <b>Bookmark</b> di laman penuh. Atau pencet <b>Salin tautan</b> pada akun publik.</li>
                               <li>Bisa skrap akun privat atau publik.</li>
                             </ul>
                             <b>Publik/ Eksternal</b>:
                             <ul>
-                              <li>tidak harus login via aplikasi, hanya bisa akses akun publik.</li>
+                              <li>Tidak harus login via aplikasi, hanya bisa akses akun publik.</li>
                               <li>Bisa memakai aplikasi Instagram atau browser bebas.</li>
                               <li>Hanya bisa unduh lewat <b>Salin tautan</b> pada akun publik</li>
                               <li>Tidak bisa skrap.</li>
@@ -81,14 +85,18 @@
                             </li>
                             </ol>
                             <p>Aplikasi ini tidak membaca, tidak tahu, tidak menyimpan, juga tidak peduli perihal akun atau
-                            kata sandi Instagram Anda. Aplikasi hanya meminjam mata Anda guna bisa mengunduh media.</p>
+                            kata sandi Instagram Anda. Aplikasi hanya meminjam mata Anda guna bisa mengunduh media. Lihat selengkapnya pada cara pemakaian.</p>
                           </div>
                         </details>
                         <details>
                           <summary>Cara kerja skraping?</summary>
                           <div>
-                            Ini versi sederhana, tidak terlalu hebat. Perlu campur tangan berhubung halaman dibikin dan hancurkan secara dinamis. <br><b>Langkah:</b> <br>1. Ramban laman sampai ke bawah guna mengumpulkan tautan, dan naik lagi guna
-                            verifikasi ulang. <br>2. Pijit tombol Skrap, dan tunggu laba-laba beres bekerja.
+                            Ini versi sederhana, tidak terlalu hebat. Perlu campur tangan berhubung halaman dibikin dan hancurkan secara dinamis. <br>
+                            <ol>
+                              <li>Ramban laman sampai ke bawah guna mengumpulkan tautan, dan naik lagi guna
+                            verifikasi ulang. <br></li>
+                            </li>Pijit tombol Skrap, dan tunggu laba-laba beres bekerja.</li>
+                            </ol>
                           </div>
                         </details>
                         <details>
@@ -113,7 +121,6 @@
                           <summary>Apa maksud <i>bermain cantik</i>?</summary>
                           <div>
                             Skraping adalah perilaku bot, bukan manusia. Bot banyak di b.a.n.
-                            <b>Main cantik:</b>
                             <ul>
                               <li>Laku lajak manusia. Klik, buka, tutup, balik, turun, naik. Laku lajak bot, melakukan satu tugas berulang-ulang. Jangan unduh terlalu banyak. Jangan suka terlalu banyak. Apapun yang diawali terlalu itu tidak baik, termasuk terlalu baik.</li>
                               <li>Berhenti unduh bila mencapai 300 per 24 jam. Anda akan dikasi nomer saat skraping.</li>
@@ -123,7 +130,7 @@
                           </div>
                         </details>
                         <details>
-                          <summary>Apa guna <i>Atur berkas penyimpanan<i>?</summary>
+                          <summary>Apa guna <i>Atur berkas penyimpanan</i>?</summary>
                           <div>
                             Untuk mengorganisir foto dan video berdasarkan tema guna kenyamanan offline. Terutama untuk menyimpan data pada lokasi penyimpanan external yang bisa diganti/ pasang ulang demi ruang lebih besar daripada penyimpanan
                             internal.
@@ -139,9 +146,7 @@
                           <summary>Saya lupa PIN. Cara reset?</summary>
                           <div>
                             Mohon catat PIN. Masuk Android Setelan sistem (<b>Setelan > Aplikasi > VIP Downloader > Penyimpanan > Hapus data</b>). Data aplikasi ini akan tersapu bersih seperti pertama terinstal. Foto dan video aman di penyimpanan
-                            tersebut di atas, namun tidak terakses dalam aplikasi. Agar berfungsi kembali dengan data lama, bangun ulang database berdasarkan bakup. Masuk <b>Setelan > Database > Bangun ulang database</b>. Aplikasi akan berfungsi
-                            normal
-                            kembali.
+                            tersebut di atas, namun tidak terakses dalam aplikasi. Agar berfungsi kembali dengan data lama, bangun ulang database berdasarkan bakup. Masuk <b>Setelan > Database > Bangun ulang database</b>. Aplikasi akan berfungsi normal kembali.
                           </div>
                         </details>
                         <details>
@@ -173,17 +178,13 @@
                         <details>
                           <summary>Tidak ada yang diunduh?</summary>
                           <div>
-                            Tunggu beberapa saat. Agar pengunduhan otomatis berfungsi, pastikan bahwa <b>VIP Downloader</b> sudah terbuka sebelum mengetuk <b>Salin tautan</b> di Instagram. Anda dapat mengetuk ikon <b>VIP Downloader</b> bila muncul
-                            untuk memverifikasi proses pengunduhan. Atau abaikan untuk melanjutkan penelusuran. Ikon akan hilang setelah beberapa detik. Namun gambar atau video akan diunduh secara otomatis selama aplikasi ini tidak mati. Jika gagal
-                            karena suatu alasan, Anda dapat menempelkan tautan klipbor ke dalam input teks yang disediakan secara manual.
+                            Tunggu beberapa saat. Agar pengunduhan otomatis berfungsi, pastikan bahwa <b>VIP Downloader</b> sudah terbuka sebelum mengetuk <b>Salin tautan</b> di Instagram. Anda dapat mengetuk ikon <b>VIP Downloader</b> bila muncul untuk memverifikasi proses pengunduhan. Atau abaikan untuk melanjutkan penelusuran. Ikon akan hilang setelah beberapa detik. Namun gambar atau video akan diunduh secara otomatis selama aplikasi ini tidak mati. Jika gagal karena suatu alasan, Anda dapat menempelkan tautan klipbor ke dalam input teks yang disediakan secara manual.
                           </div>
                         </details>
                         <details>
                           <summary>Dapatkah saya menyetel sampul video sebagai wallpaper juga?</summary>
                           <div>
-                            Ya, cukup tekan tombol <b>Setel wallpaper</b> di galeri video. Untuk memiliki sampul video layar penuh, aktifkan <b>Bikin sampul video</b> di <b>Pengaturan > Personalisasi</b>. Ini dinonaktifkan untuk menghindari sampul
-                            yang
-                            tidak diinginkan. Hanya foto video kecil yang dibuat secara bawaan.
+                            Ya, cukup tekan tombol <b>Setel wallpaper</b> di galeri video. Untuk memiliki sampul video layar penuh, aktifkan <b>Bikin sampul video</b> di <b>Pengaturan > Personalisasi</b>. Ini dinonaktifkan untuk menghindari sampul yang tidak diinginkan. Hanya foto video kecil yang dibuat secara bawaan.
                           </div>
                         </details>
                         <details>
@@ -195,15 +196,13 @@
                         <details>
                           <summary>Saya ingin menu hamburger, bukan panah rumah-balik.</summary>
                           <div>
-                            Buka <b>Pengaturan > Penampilan > Hamburger di mana-mana</b>. Aktifkan untuk menampilkan hamburger di mana-mana. Berguna untuk akses cepat ke item menu. Kemudian Anda dapat memakai panah navbar perangkat untuk pulang. Atau
-                            bisa juga gesek dari tepi kiri untuk membuka menu.
+                            Buka <b>Pengaturan > Penampilan > Hamburger di mana-mana</b>. Aktifkan untuk menampilkan hamburger di mana-mana. Berguna untuk akses cepat ke item menu. Kemudian Anda dapat memakai panah navbar perangkat untuk pulang. Atau bisa juga gesek dari tepi kiri untuk membuka menu.
                           </div>
                         </details>
                         <details>
                           <summary>Ada pertanyaan, saran, laporan bug, atau umpan balik?</summary>
                           <div>
-                            Kami senang mendengar dari Anda! Silakan gunakan <b>Umpan Balik</b>, dan beri nilai aplikasi kami. Kritik pedas, tapi konstruktif akan membantu kami mendapatkan kekuatan untuk melanjutkan. <i>Salah satu tujuan hidupmu
-                              adalah untuk membantu orang lain. Jika Anda tidak dapat membantu orang, setidaknya jangan sakiti mereka</i>, kata Dalai Lama. Terima kasih!
+                            Kami senang mendengar dari Anda! Silakan gunakan <b>Umpan Balik</b>, dan beri nilai aplikasi kami. Kritik pedas, tapi konstruktif akan membantu kami mendapatkan kekuatan untuk melanjutkan. <i>Salah satu tujuan hidupmu adalah untuk membantu orang lain. Jika Anda tidak dapat membantu orang, setidaknya jangan sakiti mereka</i>, kata Dalai Lama. Terima kasih!
                           </div>
                         </details>
                         <details>
